# quantum-structure-sae

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  Makefile  README.md  RUNBOOK.md  pyproject.toml  tmlr_draft.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: phase05_input_control.yaml  phase06_multiseed_trained.yaml  phase07_annni.yaml  phase07_xxz.yaml  smoke.yaml
docs/: CODE_MAP.md  exp01_bas_results.md  manuscript_update_phase06.md  phase05_input_control.md  week1_results.md  week3_results.md
experiments/: phase05_input_control.py  phase06_multiseed_trained.py  phase07_hamiltonian_diversity.py  smoke.py
notebooks/: 01_tfim_data_exploration.ipynb  02_sae_feature_analysis.ipynb
paper/: workshop_abstract.md
results/: README.md  phase05_input_control.md  phase06_multiseed_trained.md  phase07_annni.md  phase07_xxz.md
scripts/: build_paper.py  exp01_bas3.py  exp_ra01_train_transformer.py  exp_ra02_observables.py  exp_ra03_controls.py  exp_ra04_sae_grid.py  exp_ra06_multiseed.py  exp_ra07_causal.py  exp_ra08_scaling.py  exp_ra10_connected.py  exp_ra11_bootstrap.py  ra01_baseline_check.py  reproduce_all.sh  smoke_test.py
src/qsae/: __init__.py  config.py  datasets.py  metrics.py  observables.py  qnn.py  repro.py  runlog.py  sae.py  shadows.py  training.py
src/qsae/analysis/: distributions.py  extract.py  family_data.py  fdr.py  input_control.py
src/qsae/physics/: hamiltonians.py
src/qsae/reverse_arrow/: __init__.py  data.py  transformer.py
tests/: test_fdr.py  test_harness.py  test_input_control.py  test_observables.py  test_physics_hamiltonians.py  test_sae.py  test_shadows.py  test_sparse_solver.py  test_transformer.py
