[project]
name = "qsae"
version = "0.1.0"
description = "Sparse autoencoders for mechanistic interpretability of quantum neural networks"
requires-python = ">=3.10"
dependencies = [
    "pennylane>=0.35",
    "pennylane-lightning>=0.35",
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ipykernel", "jupyterlab"]
gpu = ["pennylane-lightning-gpu"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
